# py-path-signature

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml
py_path_signature/: calculator.py  path_signature_extractor.py
py_path_signature/data_models/: basic.py  error_messages.py  stroke.py
scripts/: build_and_try.sh  configure_dev_env.sh  sample_strokes.py  try_library.py
tests/: conftest.py  test_class_args.py  test_data_models.py  test_py_path_signature.py  test_units.py
tests/data/input/: cross.json  cross.txt  horizontal_line.json  horizontal_line.txt  horizontal_lines.json  math_expression.json  vertical_line.json  vertical_lines.json  vertical_lines.txt
tests/data/reference/: cross.json  horizontal_line.json  horizontal_lines.json  math_expression.json  vertical_line.json  vertical_lines.json
tests/data/signatures/: cross.npy  math_expression.npy  vertical_line.npy  vertical_lines.npy
tests/data/strokes/: horizontal_lines.txt  math_expression.txt  vertical_line.txt
