[tool.poetry]
name = "py-path-signature"
version = "210927.5"
description = ""
authors = ["TBD <tbd@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
